--- a/CreatingTrivia.ipynb
+++ b/CreatingTrivia.ipynb
@@ -61,7 +61,7 @@
     "    updated_df = pd.concat([existing_df, new_df], ignore_index=True)\n",
     "    return updated_df\n",
     "\n",
-    "api_key = \"AIzaSyCXWBRwkhd2XpebeFzx4MimLYga3pXfBcs\"\n",
+    "api_key = \"########################\"\n",
     "all_questions_df = generate_trivia_questions(api_key, all_questions_df, num_questions=100)\n"
    ]
   },
